src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__remove_plugin-2.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf
---
[tools]
nodejs = ["16.0.0", "18.0.0"]

