src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__remove_plugin.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.toolset
---
Toolset {
    versions: {},
    source: Some(
        RtxToml(
            "/tmp/.rtx.toml",
        ),
    ),
    disable_tools: {},
}
