src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__replace_versions-3.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf
---
/tmp/.rtx.toml: node@16.0.1 node@18.0.1
