src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__replace_versions.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.toolset
---
Toolset {
    versions: {
        "node": ToolVersionList {
            plugin_name: "node",
            versions: [],
            requests: [
                (
                    Version(
                        "node",
                        "16.0.1",
                    ),
                    {},
                ),
                (
                    Version(
                        "node",
                        "18.0.1",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "/tmp/.rtx.toml",
            ),
        },
    },
    source: Some(
        RtxToml(
            "/tmp/.rtx.toml",
        ),
    ),
    disable_tools: {},
}
