src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__set_alias.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.alias
---
{
    "node": {
        "16": "16.0.0",
        "18": "18.0.1",
        "20": "20.0.0",
    },
    "python": {
        "3.10": "3.10.0",
    },
}
